--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ author:
   email: "youremail@domain.com"
   facebook: yourname  # eg. daattali
   github: yourname    # eg. daattali
-  twitter: yourname   @arden_burrell# eg. daattali
+  twitter: arden_burrell
   reddit: yourname    # eg. daattali
   google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
   linkedin: yourname  # eg. daattali
