adding git username

--- a/_config.yml
+++ b/_config.yml
@@ -57,9 +57,9 @@ avatar: "/img/avatar-icon.png"
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
   name: Arden Burrell
-  email: "youremail@domain.com"
+  email: "arden.burrell@unsw.edu.au"
   facebook: yourname  # eg. daattali
-  github: yourname    # eg. daattali
+  github: ArdenB    # eg. daattali
   twitter: arden_burrell
   reddit: yourname    # eg. daattali
   google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
@@ -99,7 +99,7 @@ footer-links-active:
 # Select which share links to show in posts
 share-links-active:
   twitter: true
-  facebook: true
+  facebook: false
   google: false
   linkedin: true
 
