--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: Arden Burrell
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: A bit of infomation about me
 
 # --- Navigation bar options --- #
 
