--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ description: A bit of infomation about me
 navbar-links:
   About Me: "aboutme"
   Publications: "pubs"
+  Blog: "copyin"
   #Resources:
   #  - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
   #  - Learn markdown: "http://www.markdowntutorial.com/"
