--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://ArdenB.github.io"
+url: "http://ardenburrell.com"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -36,7 +36,8 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+# avatar: "/img/avatar-icon.png"
+avatar: "/img/BWimage.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
