--- a/_config.yml
+++ b/_config.yml
@@ -37,11 +37,11 @@ navbar-links:
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
 # avatar: "/img/avatar-icon.png"
-avatar: "/img/BWimage.jpg"
+# avatar: "/img/BWimage.jpg"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-# title-img: /path/to/image
+title-img: "/img/BWimage.jpg"
 
 # --- Background colour/image options --- #
 
@@ -109,7 +109,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "https://ardenb.github.io/"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "https://ardenburrell.com/"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
