--- a/_config.yml
+++ b/_config.yml
@@ -23,11 +23,12 @@ description: A bit of infomation about me
 
 # List of links in the navigation bar
 navbar-links:
+  Home: "index"
   Research: "aboutme"
   Publications: "pubs"
   Curriculum Vitae: "CV"
   Blog: "blog"
-  Google Scholar: <a href='https://scholar.google.com.au/citations?user=3a4e-tcAAAAJ&hl=en' target='_blank'</a>
+  Google Scholar: "https://scholar.google.com.au/citations?user=3a4e-tcAAAAJ&hl=en"
   Resources:
     - TSS.RESTREND: "https://github.com/ArdenB/TSSRESTREND"
   #  - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
